--- a/ASP.NET/Books/Books/appsettings.json
+++ b/ASP.NET/Books/Books/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BooksContext": "Server=(localdb)\\mssqllocaldb;Database=BooksContext-726454df-9331-48ed-93c4-eab02c6aa4e6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BooksContext-726454df-9331-48ed-93c4-eab02c6aa4e6;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
