--- a/Angular/HW-Angular/package.json
+++ b/Angular/HW-Angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-spa",
+  "name": "hw-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -22,6 +22,7 @@
     "@angular/router": "~10.1.4",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
